--- a/css/styles.css
+++ b/css/styles.css
@@ -364,7 +364,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: "Helvetica", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 500;
   line-height: 1.2;
-  color: #dbdbdb;
+  color: #dcdcdc;
 }
 
 h1, .h1 {
@@ -10018,6 +10018,7 @@ p.lead {
   text-transform: uppercase;
   font-weight: 100;
   font-size: 1.5rem;
+  color: #67829a;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
