--- a/css/styles.css
+++ b/css/styles.css
@@ -5957,16 +5957,17 @@ a.close.disabled {
 .carousel-indicators li {
   box-sizing: content-box;
   flex: 0 1 auto;
-  width: 30px;
-  height: 3px;
-  margin-right: 3px;
-  margin-left: 3px;
+  width: 12px;
+  height: 12px;
+  margin-right: 8px;
+  margin-left: 8px;
   text-indent: -999px;
   cursor: pointer;
   background-color: #fff;
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
+  border-radius: 50%;
   opacity: 0.5;
   transition: opacity 0.6s ease;
 }
