tem solution for carousel height

--- a/css/styles.css
+++ b/css/styles.css
@@ -5824,6 +5824,8 @@ a.close.disabled {
   position: relative;
   width: 100%;
   overflow: hidden;
+  /* temporary until I find the auto-resize, to prevent larger pics from overflowing */
+  max-height: 400px !important;
 }
 .carousel-inner::after {
   display: block;
