--- a/css/styles.css
+++ b/css/styles.css
@@ -10016,7 +10016,6 @@ h1 {
 p.lead {
   font-size: 1.25rem;
   font-weight: 400;
-  text-align: center;
 }
 
 .subheading {
@@ -10106,6 +10105,15 @@ section.resume-section {
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 5rem;
+  padding-bottom: 5rem;
+  max-width: 75rem;
+}
+section.resume-section.resume-section-about{
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 2rem;
   padding-bottom: 5rem;
   max-width: 75rem;
 }
