--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,32 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 
+.slidein-right {
+  animation: 2s slidein-right;
+}
+.slidein-left {
+  animation: 2s slidein-left;
+}
+@keyframes slidein-left {
+  0% {
+      transform: translateX(-100%);
+  }
+  100% {
+      transform: translateX(0);
+  }
+}
+
+@keyframes slidein-right {
+  0% {
+      transform: translateX(100%);
+  }
+  100% {
+      transform: translateX(0);
+  }
+}
+
+
+
 body {
   margin: 0;
   font-family: "sans-serif", "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -9996,7 +10022,7 @@ body {
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 17rem;
+    padding-left: 12rem;
   }
 }
 h1,
@@ -10037,13 +10063,13 @@ p.lead {
 
 @media (min-width: 992px) {
   #sideNav {
-    text-align: left;
+    text-align: right;
     position: fixed;
     top: 0;
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 17rem;
+    width: 12rem;
     height: 100vh;
   }
   #sideNav .navbar-brand {
@@ -10073,7 +10099,7 @@ p.lead {
   }
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
     display: block;
-    padding-left: 2.5rem;
+    padding-left: 1rem;
   }
 }
 .social-icons .social-icon {
@@ -10097,6 +10123,14 @@ p.lead {
 
 .dev-icons {
   font-size: 3rem;
+}
+
+.masthead {
+  display:block;
+  width: 100%;
+  background: url("assets/img/Cole_FrontPage_1.png");
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 section.resume-section {
